--- a/2016-part1/task7/taks7.html
+++ b/2016-part1/task7/taks7.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="reset.css"> -->
-  <link rel="stylesheet" href="style.css">
-  <title>任务七：实现常见的技术产品官网的页面架构及样式布局s</title>
-</head>
-<body>
-  <div id="container">
-    <header>
-      <div id="headleft">
-        <h1>新世界</h1>
-      </div>
-      <nav>
-        <ul>
-          <li>首页</li>
-          <li>最新活动</li>
-          <li>项目介绍</li>
-          <li>爱心社区</li>
-          <li>关于我们</li>
-          <li class="move"></li>
-        </ul>
-      </nav>
-      <div id="headright"></div>
-    </header>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="stylesheet" href="style.css" />
+    <title>任务七：实现常见的技术产品官网的页面架构及样式布局</title>
+  </head>
+  <body>
+    <div id="container">
+      <header>
+        <div id="headleft">
+          <h1>新世界</h1>
+        </div>
+        <nav>
+          <ul>
+            <li>首页</li>
+            <li>最新活动</li>
+            <li>项目介绍</li>
+            <li>爱心社区</li>
+            <li>关于我们</li>
+            <li class="move"></li>
+          </ul>
+        </nav>
+        <div id="headright">
+          <span>登录</span>
+        </div>
+      </header>
+      <section id="part1">
+        <div id="ty">
+          <p>Time of new life</p>
+          <p>新时代,年轻的人们让我们一起</p>
+          <p>体验新生活,享受新生活</p>
+          <span>开始体验</span>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
