feat: task7-section6

--- a/2016-part1/task7/task7.html
+++ b/2016-part1/task7/task7.html
@@ -36,6 +36,178 @@
           <span>开始体验</span>
         </div>
       </section>
+      <section id="part2">
+        <ul>
+          <li>
+            <img src="picture/icon-3.jpg" alt="">
+            <br>
+            <br>
+            <br>
+            <p>
+              打造全新世界,让你更
+              <br>
+              爱你的生活
+            </p>
+          </li>
+          <li>
+            <img src="picture/icon-4.jpg" alt="">
+            <br>
+            <br>
+            <br>
+            <p>
+              打造全新世界,让你更
+              <br>
+              爱你的生活
+            </p>
+          </li>
+          <li>
+            <img src="picture/icon-5.jpg" alt="">
+            <br>
+            <br>
+            <br>
+            <p>
+              打造全新世界,让你更
+              <br>
+              爱你的生活
+            </p>
+          </li>
+          <li>
+            <img src="picture/icon-6.jpg" alt="">
+            <br>
+            <br>
+            <br>
+            <p>
+              打造全新世界,让你更
+              <br>
+              爱你的生活
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section id="part3">
+        <img src="picture/icon-1.png" alt="">
+        <br>
+        <p>关于新世界, 你不知道的还有什么?</p>
+      </section>
+      <section id="part4">
+        <p>查找新世界城市活动信息</p>
+        <div id="line"></div>
+        <br>
+        <span>每个城市由不同的活动信息,请自主查询您所需要了解的城市</span>
+        <form action="#">
+          <select>
+            <option>中国</option>
+          </select>
+          <select>
+            <option>省份</option>
+            <option>北京市</option>
+            <option>天津市</option>
+            <option>河北省</option>
+            <option>山西省</option>
+            <option>内蒙古自治区</option>
+            <option>辽宁省</option>
+          </select>
+          <select>
+            <option>城市</option>
+            <option>北京</option>
+            <option>上海</option>
+            <option>广州</option>
+            <option>深圳</option>
+          </select>
+          <input type="submit" value="搜     索"
+        </form>
+      </section>
+      <section id="part5">
+        <div class="picture one">
+          <img src="picture/pic03.jpg" alt="">
+          <p>北京活动</p>
+          <h5>新社区大联盟</h5></h5>
+        </div>
+        <div class="picture two">
+          <span id="shanghai">上海活动</span>
+          <br>
+          <span>夜上海新景观探索</span>
+          <br>
+          <img src="picture/pic04.jpg" alt="">
+        </div>
+        <div class="picture three">
+          <img src="picture/pic05.jpg" alt="">
+          <p>深圳活动</p>
+          <h5>全新海岸线观点站</h5>
+        </div>
+        <div class="picture four">
+          <img src="picture/pic06.jpg" alt="">
+          <p>香港活动</p>
+          <h5>奢侈消费大派送</h5>
+        </div>
+      </section>
+      <section id="part6">
+        <div class="left">
+          <p>新世界</p>
+          <p>TIME</p>
+          <p>@新世界 - 北京</p>
+          <p>2021.06.18</p>
+        </div
+        ><div class="right">
+          <div id="border">
+            <input type="radio" name="list">
+            <input type="radio" name="list">
+            <input type="radio" name="list">
+            <br>
+            <!-- 这个换行很有必要 上下对齐 -->
+            <div class="list"></div>
+            <div class="list"></div>
+            <div class="list"></div>
+            <div class="info info-1">
+              <p>新世界/<span>01</span></p>
+              <p>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+              </p>
+            </div>
+
+            <div class="info info-2">
+              <p>新世界/<span>02</span></p>
+              <p>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+              </p>
+            </div>
+
+            <div class="info info-3">
+              <p>新世界/
+              <span>03</span>
+              </p>
+              <p>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+                新世界是个新世界新世界是个新世界新世界是个新世界
+                <br>
+              </p>
+            </div>
+
+            <div id="button">
+              <button>更多详情</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
