--- a/2016-part1/task7/task7.html
+++ b/2016-part1/task7/task7.html
@@ -208,6 +208,68 @@
           </div>
         </div>
       </section>
+      <section id="part7">
+        <div class="col col-1">
+          <div class="new">
+            <p>新时代
+              <br>
+              关于爱生活的我们
+            </p>
+            <div class="line line-1"></div>
+            <button>查看更多</button>
+          </div>
+        </div>
+        <div class="col col-2">
+          <div class="new">
+            <p>新时代
+              <br>
+              关于爱生活的我们
+            </p>
+            <div class="line line-2"></div>
+            <button>查看更多</button>
+          </div>
+        </div>
+        <div class="col col-3"></div>
+      </section>
+      <section id="part8">
+        <div id="mark1">
+          <h3>成为我们的志愿者</h3>
+          <div class="line"></div>
+          <p>
+            新世界的大家庭需要每一个爱生活的人的加入，如果你够年轻，有梦想，有激情
+            <br>
+				那就不要犹豫 ，快来加入我们，成为改变所有生活的人
+          </p>
+        </div>
+        <div id="mark2">
+          <div class="mark mark-1">
+            <div class="mark-1-1">
+              <h4>新世界志愿者协议</h4>
+              <p>加入新世界志愿者的人员必须遵守中华人民共和国的
+              <br>
+              相关法律法规，并且本着平等资源的原则 ......
+              <br>
+              <a href="#">v more</a>
+            </p>
+            <br>
+            <br>
+            <h4>新世界志愿者权利</h4>
+            <p>
+              <p>新世界志愿者享受新世界内部所有资源共享的权利，
+                <br>
+                并且享受所在四新世界活动的优先参与资格
+                <br>
+                <a href="#">∨ more</a>
+            </p>
+            <br>
+            <br>
+            <h4>更多条款</h4>
+            <a href="#">v more</a>
+            </div>
+          </div><!--
+          --><div class="mark mark-2"></div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
