feat: task7-section8/10

--- a/2016-part1/task7/task7.html
+++ b/2016-part1/task7/task7.html
@@ -267,8 +267,46 @@
             <a href="#">v more</a>
             </div>
           </div><!--
-          --><div class="mark mark-2"></div>
+          --><div class="mark mark-2">
+            <div class="mark-2-1">
+              <form action="#" method="post">
+                <input type="name" value=" 姓名:">
+                <input type="name" value=" 年龄:">
+                <br>
+                <input type="name" value=" 联系方式:">
+                <input type="name" value=" 联系地址:">
+                <br>
+                <textarea cols="100" rows="10" placeholder="请简单描述您梦想的生活:"></textarea>
+                <br>
+                <input type="submit" value="提交申请">
+              </form>
+              <div></div>
+            </div>
+          </div>
         </div>
+      </section>
+      <section id="part9">
+        <p>联系我们</p>
+        <p>
+          为了更好的获取我们最新的产品资讯，您可以留下您的电子邮箱快速订阅我们的产品资讯
+          <br>
+          也可以通过以下任何方式关注我们动态
+        </p>
+        <form action="#" method="post">
+          <input type="email" value="someone@email.com">
+          <input type="submit" value="提 交">
+        </form>
+        <br>
+        <img src="picture/qq.png" alt="">
+        <img src="picture/weibo.png" alt="">
+        <img src="picture/twitter.png" alt="">
+        <img src="picture/web.png" alt="">
+      </section>
+      <section id="part10">
+        <span>@2021新世界</span>
+        <span>
+          <a href="#headleft">Back to top</a>
+        </span>
       </section>
     </div>
   </body>
